# trpg-llm

./: .env.example  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: copilot-instructions.md  copilot-setup-steps.yml
.github/instructions/: game-configs.instructions.md  python-tests.instructions.md  react-components.instructions.md
.github/workflows/: ci.yml  frontend-ci.yml
configs/: coc_example.yaml  multi_llm_example.yaml  simple_game.json
docs/: LLM_PROFILES.md
examples/: api_demo.sh  basic_usage.py  chat_and_tools_example.py
frontend/: README.md  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
tests/: __init__.py
tests/integration/: test_chat_pipeline.py  test_chat_pipeline_profiles.py  test_game_engine.py  test_game_engine_enhancements.py
tests/unit/: test_agent_manager.py  test_agent_manager_profiles.py  test_auto_progression.py  test_dice.py  test_llm_profile.py  test_operations.py  test_prompt_renderer.py  test_state_machine.py  test_tool_executor.py
trpg_llm/: __init__.py  main.py
trpg_llm/api/: __init__.py  schemas.py  server.py
trpg_llm/config/: __init__.py  loader.py
trpg_llm/core/: __init__.py  auto_progression.py  builtin_tools.py  chat_pipeline.py  dice.py  game_engine.py  prompt_renderer.py  tool_executor.py
trpg_llm/llm/: __init__.py  agent.py  agent_manager.py  llm_client.py  profile.py
trpg_llm/models/: __init__.py  character.py  dice.py  event.py  game_state.py
(+18 files in other folders)
